# RustyVault

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: app.rs  crypto.rs  db.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
