[package]
name = "rusty-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
arboard = "3.6.1"
base64 = "0.22.1"
color-eyre = "0.6.3"
crossterm = "0.29.0"
rand = "0.8.5"
ratatui = "0.30.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
zeroize = { version = "1.9.0", features = ["zeroize_derive"] }
